# dailyup

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
.kiro/steering/: product.md  structure.md  tech.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: assessments.py  chapters.py  plans.py  projects.py  settings.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_service.py  context_builder.py  output_parser.py
backend/app/services/prompts/: assessment_prompt.py  evaluation_prompt.py  material_prompt.py  plan_prompt.py
backend/tests/: conftest.py  test_assessments.py  test_chapters.py  test_plans.py  test_progress.py  test_projects.py  test_settings.py
docs/mvp/: design.md  requirements.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/db/: index.ts
src/hooks/: useChapters.ts  useProjects.ts
src/lib/: prompts.ts  utils.ts
src/pages/: AssessmentPage.tsx  CalendarPage.tsx  CreateProjectPage.tsx  DashboardPage.tsx  LLMConfigPage.tsx  MaterialPage.tsx  ProfilePage.tsx  ProjectDetailPage.tsx  SettingsPage.tsx
src/schemas/: index.ts
src/services/: ai.ts
src/stores/: llmConfigStore.ts  profileStore.ts  uiStore.ts
(+43 files in other folders)
