[project]
name = "dailyup-backend"
version = "0.1.0"
description = "DailyUp — AI-powered personalized learning platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "openai",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "hypothesis",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
